[package]
name = "complexity-audit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to analyze Python code for cyclomatic complexity"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8" 